[package]
name = "wuotan"
version = "0.1.0"
description = "Flash tool for Samsung devices"
license = "GPL-3.0"
authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
keywords = ["samsung", "flash", "tool", "odin"]
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
bitflags = "1.2"
byteorder = "1.2"
clap = { version = "3.0.7", features = ["cargo"] }
md-5 = "0.10"
rusb = "0.9"
tar = { version = "0.4.35", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
libusb-vendored = ["rusb/vendored"]
